@@ -1,3 +1,15 @@
+Tue Jul 14 20:15:03 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * TAO_IDL/contrib/mcpp/eval.cpp:
+        * TAO_IDL/contrib/mcpp/internal.H:
+        * TAO_IDL/contrib/mcpp/lib.cpp:
+        * TAO_IDL/contrib/mcpp/main.cpp:
+        * TAO_IDL/contrib/mcpp/mbchar.cpp:
+        * TAO_IDL/contrib/mcpp/support.cpp:
+        * TAO_IDL/contrib/mcpp/system.cpp:
+
+          Address some warnings. 
+        
 Tue Jul 14 14:21:41 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * TAO_IDL/be/be_visitor_any_extracted_type_decl.cpp:
